# underground-chat

./: .env.example  Cargo.toml  README.md
.github/workflows/: client.yml  server.yml
client/: biome.json  bun.lockb  package-lock.json  package.json  tsconfig.json
client/src/lib/actions/: CopyClipBoard.ts  ScrollTo.ts
client/src/lib/components/: Button.svelte  TextField.svelte
client/src/lib/services/: index.ts
client/src/lib/services/ChatService/: index.ts
client/src/lib/services/MessagesService/: index.ts
client/src/lib/services/UserService/: index.ts
client/src/lib/stores/: messages.ts  users.ts
client/src/lib/types/: Chat.ts  Join.ts  Messages.ts
client/src/lib/utils/: DateToHours.ts  fetch.ts
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/chat/[id]/: +page.svelte  +page.ts
client/src/routes/join/: +page.svelte
src/: main.rs
src/events/: join.rs  message.rs  mod.rs
src/routes/: chats.rs  mod.rs
